<resources>
    <string name="app_name">FitnessClubMobile</string>
    <string name="messageWithLink" translatable="false"><font color='#696969'><a href="https://www.google.com/">Forgot Password?</a></font></string>
    <string name="messageWithLinkk" translatable="false"><font color='#696969'><a href="https://www.google.com/">Create one!</a></font></string>
    <string name="messageWithLinkkk" translatable="false"><font color='#696969'><a href="https://www.google.com/">Login</a></font></string>


    <!-- Button label for blue button -->
    <string name="blue_button" translatable="false">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button" translatable="false">Green</string>

    <!-- Button label for red button -->
    <string name="red_button" translatable="false">Red</string>

    <!-- Button label for black button -->
    <string name="black_button" translatable="false">Black</string>

    <!-- Default string for count TextView -->
    <string name="default_count" translatable="false">0</string>

    <!-- Button label for Count button -->
    <string name="count_button" translatable="false">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button" translatable="false">Reset</string>
    
    
    
    <string name="logout_button">Logout</string>
    <string name="logged_in">Logged in User</string>
    <string name="add_program">Add Program</string>
    <string name="my_programs">My Programs</string>
    <string name="add_plan">Add Plan</string>
    <string name="edit_programs">Edit Programs</string>
    <string name="go_exercise">Go Exercise</string>
    <string name="list_of_programs">List of Programs</string>
    <string name="program_one">Program 1</string>
    <string name="program_two">Program 2</string>
    <string name="program_three">Program 3</string>
    <string name="program_four">Program 4</string>
    <string name="edit_program">Edit Program</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
</resources>