<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="@drawable/gymo"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fitne"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ss Club"
            android:textColor="#F082F2"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged_in"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:src="@drawable/approvedpng"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="goHome"
        android:text="@string/logout_button"
        android:textAllCaps="false"
        android:textColor="#F082F2"
        android:textSize="17dp"
        app:backgroundTint="#0000"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="goExercise"
        android:layout_marginTop="5dp"
        android:text="@string/go_exercise"
        android:textAllCaps="false"
        android:textColor="#F082F2"
        android:textSize="17dp"
        app:backgroundTint="#0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/textView5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="launchActivitySix"
            android:paddingLeft="10dp"
            android:text="@string/add_program"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="#0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/textView6"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_programs"
            android:textAllCaps="false"
            android:textColor="#F082F2"
            app:backgroundTint="#0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/textView7"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="launchActivityEight"
            android:text="@string/add_plan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="#0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/textView8"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="launchActivityFive"
            android:text="@string/edit_programs"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="#0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded3"
            app:backgroundTint="#F082F2"
            android:text="@string/program_one"
            android:textColorHint="#383838"
            android:paddingLeft="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded3"
            android:text="@string/program_two"
            android:paddingLeft="40dp"
            app:backgroundTint="#F082F2"
            android:textColorHint="#383838"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3">

        </EditText>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:textColorHint="#383838"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded3"
            android:text="@string/program_three"
            android:paddingLeft="40dp"
            app:backgroundTint="#F082F2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4">

        </EditText>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded3"
            android:text="@string/program_four"
            android:paddingLeft="40dp"
            app:backgroundTint="#F082F2"
            android:textColorHint="#383838"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5">

        </EditText>


        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_program"
            android:textAllCaps="false"
            app:backgroundTint="#0000"
            android:textColor="#383838"
            app:layout_constraintBottom_toBottomOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@+id/editText3"
            app:layout_constraintVertical_bias="0.355"
            android:onClick="launchActivityFive"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_program"
            android:textAllCaps="false"
            app:backgroundTint="#0000"
            android:textColor="#383838"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintEnd_toEndOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintTop_toTopOf="@+id/editText4"
            app:layout_constraintVertical_bias="0.355"
            android:onClick="launchActivityFive"/>


        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_program"
            android:textAllCaps="false"
            app:backgroundTint="#0000"
            android:textColor="#383838"
            app:layout_constraintBottom_toBottomOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintHorizontal_bias="0.884"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toTopOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.355"
            android:onClick="launchActivityFive"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_program"
            android:textAllCaps="false"
            android:textColor="#383838"
            app:backgroundTint="#0000"
            app:layout_constraintBottom_toBottomOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="launchActivityFive"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/setting"
        android:gravity="center"
        android:onClick="settings"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        app:backgroundTint="#0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

    </TextView>


    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3">

        <View
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/facebook"
            android:onClick="Facebook"

            ></View>

        <View
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/instagram"

            >
        </View>


        <View
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/twitter"

            >
        </View>


    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingLeft="20dp"
        android:text="@string/list_of_programs"
        android:textColor="@color/white"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>