<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Exercise">

    <TextView
        android:id="@+id/count_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/default_background"
        android:gravity="center"
        android:text="@string/default_count"
        android:textColor="@android:color/white"
        android:textSize="112sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_upper"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="178dp" />

    <Button
        android:id="@+id/black_background_button"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:onClick="changeBackground"
        android:background="@color/daymn4"
        android:text="Squats"
        app:backgroundTint="@color/daymn4"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline_lower"
        app:layout_constraintEnd_toStartOf="@+id/red_background_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_upper"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/arrow"
        android:gravity="center"
        android:onClick="launchMainActivity"
        android:padding="0dp"
        android:text="Back to Home"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="#0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/red_background_button"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:onClick="changeBackground"
        android:textAllCaps="false"
        android:background="@color/daymn2"
        app:backgroundTint="@color/daymn2"
        android:text="Push-ups"
        app:layout_constraintBottom_toTopOf="@+id/guideline_lower"
        app:layout_constraintEnd_toStartOf="@+id/blue_background_button"
        app:layout_constraintStart_toEndOf="@+id/black_background_button"
        app:layout_constraintTop_toTopOf="@+id/guideline_upper"/>

    <Button
        android:id="@+id/blue_background_button"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:onClick="changeBackground"
        android:text="Clamshells"
        android:background="@color/daymn"
        android:layout_marginStart="2dp"
        android:textAllCaps="false"
        app:backgroundTint="@color/daymn"
        app:layout_constraintBottom_toTopOf="@+id/guideline_lower"
        app:layout_constraintEnd_toStartOf="@+id/green_background_button"
        app:layout_constraintStart_toEndOf="@+id/red_background_button"
        app:layout_constraintTop_toTopOf="@+id/guideline_upper"/>

    <Button
        android:id="@+id/green_background_button"
        style="@style/AppTheme.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:onClick="changeBackground"
        android:text="Floor jack"
        app:backgroundTint="@color/daymn3"
        android:background="@color/daymn3"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/blue_background_button"
        app:layout_constraintTop_toTopOf="@+id/guideline_upper"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="107dp" />

    <Button
        android:id="@+id/count_button"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="countUp"
        android:text="@string/count_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_lower"
        android:textColor="@color/white"
        android:background="@drawable/rounded2"
        app:backgroundTint="#F082F2"/>

    <Button
        android:id="@+id/reset_button"
        style="@style/AppTheme.Button"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/count_button"
        app:layout_constraintTop_toBottomOf="@+id/guideline_lower"
        android:textColor="@color/white"
        android:background="@drawable/rounded2"
        app:backgroundTint="#F082F2"/>

</androidx.constraintlayout.widget.ConstraintLayout>